modificaciones componente card

--- a/src/components/containerCard/cards.css
+++ b/src/components/containerCard/cards.css
@@ -6,8 +6,8 @@
 }
 
 .card{
-    width: 1fr;
-    height: auto; /* Ajusta la altura según sea necesario */
+    width: 100%;
+    height: auto;
     color: var(--primary-text-color);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -20,15 +20,16 @@
 
 .card-img {
     width: 100%;
-    height: 70%; /* Ajusta la altura según sea necesario */
+    height: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: white;
+    padding: 10px;
 
     & img {
-        width: 150px;
-        height: 150px;
+        width: 100%;
+        height: auto;
         object-fit: cover; /* Mantiene la proporción de la imagen */
         filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3)); /* Sombra suave */
     }
@@ -39,11 +40,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 5px;
+    justify-content: center;
     width: 100%;
     height: 30%;
-    background-color: var(--secondary-color);
-    color: var(--primary-text-color);
 
     h3 {
         font-size: 1rem;
@@ -58,4 +57,41 @@
         word-break: break-word;
         overflow-wrap: break-word;
     }
+}
+
+.button{
+    width: 100%;
+    background-color: var(--primary-color);
+
+    &:hover {
+        background-color: #34a1ea;
+    }
+
+    & button{
+        background-color: transparent;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        padding: 5px 10px;
+    }
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+.modal-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    padding: 0;
+    border-radius: 8px;
 }
