primer diseño mobile sin funcionalidades

--- a/src/components/containerCard/cards.css
+++ b/src/components/containerCard/cards.css
@@ -68,7 +68,7 @@
     background-color: var(--primary-color);
 
     &:hover {
-        background-color: #34a1ea;
+        background-color: var(--hover-color);
     }
 
     & button {
