--- a/src/components/carrito/carrito.css
+++ b/src/components/carrito/carrito.css
@@ -12,3 +12,18 @@
     max-height: 200px;
     overflow-y: auto;
 }
+
+.btn-copiar {
+    background-color: var(--primary-color);
+    color: var(--primary-text-color);
+    border: none;
+    border-radius: 5px;
+    padding: 5px 15px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top: 10px;
+
+    &:hover {
+        background-color: var(--hover-color);
+    }
+}
