--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -6,6 +6,7 @@
     --background-main: #d9d9d9; /* Gris claro */
     --primary-text-color: white;
     --secondary-text-color: black;
+    --hover-color: #34a1ea; /* Celeste claro */
 
     /* Tipografía */
     --font-family: 'Roboto', sans-serif;
