nuevas funcionalidades carrito

--- a/src/components/carrito/carrito.css
+++ b/src/components/carrito/carrito.css
@@ -27,3 +27,9 @@
         background-color: var(--hover-color);
     }
 }
+
+.carrito-botones {
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+}
