--- a/src/components/carrito/carrito.css
+++ b/src/components/carrito/carrito.css
@@ -33,3 +33,52 @@
     justify-content: space-around;
     gap: 10px;
 }
+
+.item-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+
+    & p {
+        margin: 0;
+    }
+}
+
+.btn-cantidades {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.btn-cantidades button,
+.btn-cantidades .p-cantidad {
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0 8px;
+    font-size: 1rem;
+    border: none;
+    background: #f0f0f0;
+    border-radius: 4px;
+}
+
+.btn-cantidades .p-cantidad {
+    min-width: 24px;
+    text-align: center;
+    background: transparent;
+}
+
+.btn-borrar {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.item-list-btn{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
