--- a/src/components/containerCard/cards.css
+++ b/src/components/containerCard/cards.css
@@ -45,8 +45,10 @@
     align-items: center;
     text-align: center;
     justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
     height: 30%;
+    
 
     h3 {
         font-size: 1rem;
