--- a/src/components/catalogo/catalogo.css
+++ b/src/components/catalogo/catalogo.css
@@ -1,6 +1,6 @@
 .catalogo {
     width: 100%;
-    color: var(--secondary-color);
+    color: var(--color-celeste-oscuro);
     text-align: center;
     font-weight: bold;
 }
