--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 .App {
@@ -38,11 +39,4 @@
     width: 150px;
     height: 200px;
     background-color: coral;
-}
-
-footer {
-    background-color: var(--secondary-color);
-    color: var(--primary-text-color);
-    text-align: center;
-    padding: 20px;
 }
