--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,6 +2,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background-color: var(--color-celeste-muy-oscuro);
+    color: var(--primary-text-color);
+    text-align: center;
+    padding: 20px;
 }
 
 .contactoDev{
