--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -4,22 +4,36 @@
     align-items: center;
     gap: 10px;
 
-    h3{
+    h3 {
         margin-bottom: 10px;
     }
 }
 
-.info-card{
+.info-card {
     width: 100%;
     height: auto;
-    background-color: var(--secondary-color);
+    background-color: var(--color-celeste);
     color: var(--primary-text-color);
     padding: 10px;
     border-radius: 8px;
 
     & a {
-        color: var(--primary-text-color);
+        color: var(--color-amarillo);
         text-decoration: none;
-        padding: 10px 0;
+        padding: 10px 5px;
+        text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+        &:hover {
+            background-color: #d9d9d934;
+            border-radius: 15px;
+        }
     }
+}
+
+.icon-instagram {
+    margin: 0 5px;
+    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+    border-radius: 10px;
+    padding: 3px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
