--- a/src/components/containerCard/cards.css
+++ b/src/components/containerCard/cards.css
@@ -1,14 +1,11 @@
 .container-card {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* Dos columnas de igual ancho */
-    gap: 16px;
-    /* Espacio opcional entre las cards */
+    grid-template-columns: 1fr;
 }
 
 .card {
-    width: 100%;
+    max-width: 250px;
     height: auto;
     color: var(--primary-text-color);
     border-radius: 10px;
@@ -22,12 +19,13 @@
 
 .card-img {
     width: 100%;
-    height: 70%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: white;
     padding: 10px;
+    object-fit: cover;
 
     & img {
         width: 100%;
@@ -48,7 +46,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: 30%;
-    
+
 
     h3 {
         font-size: 1rem;
@@ -119,4 +117,30 @@
     cursor: pointer;
     z-index: 2;
     margin-right: 20px;
+}
+
+/* Media Querys */
+
+@media (max-width: 800px) {
+    .container-card {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 620px) {
+    .container-card {
+        grid-template-columns: repeat(2, 1fr) !important;
+        gap: 10px;
+        justify-items: center;
+    }
+}
+
+@media (min-width: 801px){
+    .container-card {
+        grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+        gap: 15px;
+        justify-items: center;
+    }
 }
